# run-elyza-tasks-100

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
prompt/: v2.txt
src/: api_client.py  evaluate.py  main.py  predict.py  predict_api.py  prediction.py  util.py
