[tool.poetry]
name = "run-elyza-tasks-100"
version = "0.1.0"
description = "A repository to run ELYZA-tasks 100"
authors = ["cfiken <cfiken@gmail.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.36.2"
torch = "^2.1.2"
accelerate = "^1.3.0"
bitsandbytes = "^0.41.3"
sentencepiece = "^0.1.99"
datasets = "^2.16.1"
tenacity = "^9.0.0"
openai = "^1.60.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
mypy = "*"
ruff = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
